perform some CPR, update to latest knex ver, stop using format API, use npm/sql-formatter

--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "debug": "~2.2.0",
     "express": "~4.13.4",
     "jade": "~1.11.0",
-    "knex": "0.14.4",
+    "knex": "0.95.0",
     "lodash": "4.17.4",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "route-harness": "^1.1.0",
     "serve-favicon": "~2.3.0",
+    "sql-formatter": "^4.0.2",
     "shelljs": "^0.7.6",
     "stylus": "0.54.5"
   },
